# pushover

./: CHANGELOG.md  Cargo.toml  README.md  TESTING.md  install.sh  make-tarball.sh  pushover.spec
.github/workflows/: build.yml  ci-cd.yml  copr.yml
etc/bash-completion/: pushover
etc/pushover/: config.toml
src/: lib.rs  main.rs
tests/: config_tests.rs  integration_tests.rs  unit_tests.rs
