[package]
name = "pushover"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "pushover"
path = "src/main.rs"

[lib]
name = "pushover"
path = "src/lib.rs"

[dependencies]
rustls = "0.21"
webpki-roots = "0.25"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
